Mon Dec 29 23:37:21 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* acinclude.m4 configure.in src/pool/user.c src/server/login.c:
	- fix problem with Linux Amd64 problem
	* misc/test-dist.sh: fix error if freetds-* is not present

Mon Dec 29 22:44:33 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/unittests/cs_config.c src/odbc/unittests/transaction.c:
	- remove warnings compiling unittests

Mon Dec 29 18:04:58 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* freetds.spec.in doc/README.releasing:
	- updates for rpm

Mon Dec 29 17:07:45 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds_sysdep_private.h src/tds/login.c:
	* src/tds/read.c src/tds/write.c:
	- fix problem with win32
	* src/odbc/odbc.c: fix problem with big-endian machines
	* src/odbc/odbc_util.c src/odbc/odbc_util.h:
	- fix possible lose of precision and string shorting
	* src/tds/iconv.c: warning
	* win32/config.h: remove warning
	* win32/dev-cpp/FreeTDS.dev win32/dev-cpp/Makefile.win:
	* win32/msvc6/FreeTDS.dsp:
	- updated

Mon Dec 29 10:45:25 EST 2003	JK Lowden <jklowden@schemamania.org>
	* tds.dox use short names, so HP/UX can unpack the tarball. 
	* doc/Makefile.am fail if man pages don't build, better doc install
	* doc/README.releasing release engineering notes
	* doc/userguide.sgml OS X ODBC note
	* src/dblib/bcp.c patch from Christos for native bcp null handling
	* src/tds/token.c remove bogus log entry

Mon Dec 29 15:18:26 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* freetds.spec.in doc/Makefile.am:
	- install images for userguide
	- fix install on some old platforms (like HP/UX 10.20)

Mon Dec 29 14:56:14 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* doc/images/important.gif(added) doc/images/tip.gif(added):
	* doc/images/note.gif(added):
	- added images for userguide

Sun Dec 28 18:53:08 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/iconv.c src/tds/token.c: comment updates