@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 
 dnl ------------------------------------------------------------
-dnl $Id: configure.in,v 1.120 2003-12-29 22:37:31 freddy77 Exp $
+dnl $Id: configure.in,v 1.121 2003-12-30 10:27:41 freddy77 Exp $
 dnl If you're trying to create a new configure test, try
 dnl
 dnl 	http://autogen.sourceforge.net/conftest.html
@@ -117,6 +117,7 @@ AC_CHECK_SIZEOF(double)
 AC_CHECK_SIZEOF(long double)
 AC_CHECK_SIZEOF(long long)
 AC_CHECK_SIZEOF(__int64)
+AC_CHECK_SIZEOF(void *)
 
 case 2 in
 $ac_cv_sizeof_short)   tds_sysdep_int16_type=short;;
@@ -157,11 +158,21 @@ else
     AC_MSG_WARN([SQL Server 2000 "bigint" 8-byte integer will not work])
 fi
 
+case $ac_cv_sizeof_void_p in
+$ac_cv_sizeof_short)     tds_sysdep_intptr_type=short;;
+$ac_cv_sizeof_int)       tds_sysdep_intptr_type=int;;
+$ac_cv_sizeof_long)      tds_sysdep_intptr_type=long;;
+$ac_cv_sizeof_long_long) tds_sysdep_intptr_type="long long";;
+$ac_cv_sizeof___int64)   tds_sysdep_intptr_type=__int64;;
+*)                     AC_ERROR(No intptr type found.)
+esac
+
 AC_SUBST(tds_sysdep_int16_type)
 AC_SUBST(tds_sysdep_int32_type)
 AC_SUBST(tds_sysdep_real32_type)
 AC_SUBST(tds_sysdep_real64_type)
 AC_SUBST(tds_sysdep_int64_type)
+AC_SUBST(tds_sysdep_intptr_type)
 
 dnl ------------------------------------------------------------
 dnl Checks for typedefs and structures
