@@ -1,3 +1,8 @@
+Tue Dec 30 11:26:58 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
+	* configure.in include/tds.h include/tds_sysdep_public.h.in:
+	* src/odbc/odbc.c win32/tds_sysdep_public.h:
+	- added TDS_INTPTR type (to remove warnings with 64bit platform)
+
 Mon Dec 29 23:37:21 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
 	* acinclude.m4 configure.in src/pool/user.c src/server/login.c:
 	- fix problem with Linux Amd64 problem
